Refactored givesHigherScoreToPathWithMostKingsToEat